<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.toolbar.MainActivity" >

    <item
        android:id="@+id/action_remove_all"
        android:title="@string/action_remove_all"
        android:icon="@drawable/ic_remove_shopping_cart_white_24px"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_strikethrough"
        android:title="@string/action_strikethrough_all"
        android:icon="@drawable/ic_format_strikethrough_white_24px"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sort_alpha"
        android:title="@string/action_sort_alpha"
        android:icon="@drawable/ic_sort_by_alpha_white_24px"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_copy_to_clipboard"
        android:title="@string/action_copy_to_clipboard"
        android:icon="@drawable/ic_content_copy_white_24px"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_exit_app"
        android:title="@string/action_exit_app"
        app:showAsAction="never"/>

</menu>